# validator-lab

./: .gitignore  Cargo.toml  PROGRESS.md  README.md
.github/scripts/: cargo-audit.sh  cargo-clippy.sh  cargo-fmt.sh  cargo-test.sh  read-cargo-variable.sh  rust-version.sh
.github/workflows/: audit.yml  rust.yml
scripts/: cargo-fmt.sh  init-metrics.sh
src/: client_config.rs  cluster_images.rs  docker.rs  genesis.rs  k8s_helpers.rs  kubernetes.rs  ledger_helper.rs  lib.rs  library.rs  main.rs  node.rs  release.rs  startup_scripts.rs  validator.rs  validator_config.rs
src/scripts/: bootstrap-startup-script.sh  bootstrap-validator-startup-script.sh  client-startup-script.sh  rpc-node-startup-script.sh  validator-startup-script.sh
